# c-build-to-bazel-build

./: .gitignore  MODULE.bazel  README.md  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json
src/: BUILD.bazel  main.ts  stuff.txt  tsconfig.json
tools/: bazel  buildifier
