load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_binary")

ts_project(
    name = "main_ts",
    srcs = ["main.ts"],
    deps = [
        "//:node_modules/@anthropic-ai/sdk",
    ],
)

js_binary(
    name = "main",
    data = [":main_ts"],
    entry_point = "main.js",
)
